change style and update feature

--- a/hasil.html
+++ b/hasil.html
@@ -8,8 +8,11 @@
   <body>
       <div id="wrap">
         <h1 id="score">100%</h1>
-        <h3 id="message">Selamat !!!</h3>  
-      </div>       
+        <h3 id="message">Selamat !!!</h3>       
+        <div id="bener">
+          <!-- ul element here -->
+        </div>  
+      </div>
     <script src="soal.js"></script>        
     <script src="fungsi.js"></script>
   </body>
